# inspectorgadget

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  Notes.md  README.md  README.md~  SubmissionOutline.md  build.sh
include/Gadgets/: Edge.h  Edge.h~  JointAnalysis.h  Node.h  Node.h~  Operators.h  Operators.h~
lib/: CMakeLists.txt
lib/Gadgets/: JointAnalysis.cxx  Operators.cxx  Operators.cxx~
lib/RangeCoordinator/: CMakeLists.txt  RangeCoordinator.cpp  RangeHandler.cpp
lib/SCCS/: PrintSCC.cpp
programs/: operators  operators.bc  operators.c  operators_ssa.bc  operators_ssa.ll  operators_ssa_dep_bc  operators_ssa_dep_bc.ll  test1.bc  test1.c  test1_ssa.bc  test1_ssa.ll
references/: Logic_Lesson_2.key
tests/: branchtest.bc  branchtest.cpp  branchtest.ll  cfg._ZNSt3__111char_traitsIcE11eq_int_typeEii.dot  cfg._ZNSt3__111char_traitsIcE3eofEv.dot  cfg._ZNSt3__111char_traitsIcE6lengthEPKc.dot  cfg._ZNSt3__116__pad_and_outputIcNS_11char_traitsIcEEEENS_19ostreambuf_iteratorIT_T0_EES6_PKS4_S8_S8_RNS_8ios_baseES4_.dot  cfg._ZNSt3__124__put_character_sequenceIcNS_11char_traitsIcEEEERNS_13basic_ostreamIT_T0_EES7_PKS4_m.dot  cfg._ZNSt3__1lsINS_11char_traitsIcEEEERNS_13basic_ostreamIcT_EES6_PKc.dot  cfg.__clang_call_terminate.dot  cfg.main.dot
tools/inspector/: CMakeLists.txt  inspector.cxx
